--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -989,7 +989,7 @@ EditorKeyboardShortcutSettings.SessionConsole=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
+Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 Border="\"Object.Appearance.Background\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
@@ -1643,8 +1643,8 @@ Voice.TimeStamp=2019.01.22-17.46.01
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2019.01.22-17.44.49
 MovieSceneCapture.LastCompileMethod=External
-ACCDirector.TimeStamp=2019.03.02-13.57.00
-ACCDirector.LastCompileMethod=Runtime
+ACCDirector.TimeStamp=2019.03.05-10.39.27
+ACCDirector.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2019.01.22-17.43.59
 ExternalImagePicker.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2019.01.22-17.45.26
@@ -1915,8 +1915,5 @@ bPlatformUsed[31]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
-
-[/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=-8,Y=-8)
 
 
