--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -10,6 +10,7 @@ Paths=../../../Engine/Plugins/Lumin/MagicLeap/Content
 Paths=../../../Engine/Plugins/Media/MediaCompositing/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+Paths=../../../Engine/Plugins/Developer/AnimationSharing/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
@@ -35,5 +36,11 @@ WindowMirrorMode=1
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
+
+[/Script/LuminPlatformEditor.MagicLeapSDKSettings]
+MLSDKPath=(Path="")
+
+[FProjectLauncher]
+AdvancedMode=False
 
 
