--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -40,13 +40,9 @@ LastLevel=/Game/Maps/LVL_ACCDClient
 [AssetEditorManager]
 CleanShutdown=True
 
-[PluginBrowser]
-InstalledPlugins=DialoguePlugin
-InstalledPlugins=Substance
-
 [RootWindow]
-ScreenPosition=X=641.000 Y=158.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=1.000 Y=0.000
+WindowSize=X=1268.000 Y=680.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -75,7 +71,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/UMG/Car
+ContentBrowserTab1.SelectedPaths=/Game/UMG/Settings
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -645,7 +641,7 @@ WB_ConnectionPanel_C.Clipping=True
 WB_ConnectionPanel_C.Navigation=True
 EdGraph.Graph=True
 EdGraph.Inputs=True
-EdGraph.Outputs=True
+EdGraph.Outputs=False
 K2Node_CustomEvent.GraphNodeDetail=True
 K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
@@ -860,8 +856,8 @@ MulticastDelegateProperty.DefaultValueCategory=True
 ScrollBox.Layout=True
 WB_CarsList_C.Default=True
 RecastNavMesh.Cooking=True
-WB_CameraPanel_C.Appearance=True
-WB_CameraPanel_C.Input=True
+WB_CameraPanel_C.Appearance=False
+WB_CameraPanel_C.Input=False
 WB_CameraPanel_C.Interaction=True
 WB_CameraPanel_C.Behavior=True
 WB_CameraPanel_C.Render Transform=True
@@ -1220,16 +1216,67 @@ UniformGridPanel.Performance=True
 UniformGridPanel.Clipping=True
 UniformGridPanel.Navigation=True
 UniformGridPanel.Localization=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+BP_HUD_C.Tick=True
+BP_HUD_C.HUD=True
+BP_GameMode_C.Tick=True
+BP_GameMode_C.Classes=True
+BP_GameMode_C.Game=True
+BP_GameMode_C.GameMode=True
+K2Node_SwitchString.PinOptions=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
+ProgressBar.Localization=True
+SpinBox.Layout=True
+SpinBox.Content=True
+SpinBox.Style=True
+SpinBox.Slider=True
+SpinBox.Display=True
+SpinBox.Behavior=True
+SpinBox.Render Transform=True
+SpinBox.Performance=True
+SpinBox.Clipping=True
+SpinBox.Navigation=True
+SpinBox.Localization=True
+SpinBox.Events=True
+ComboBoxString.Layout=True
+ComboBoxString.Content=True
+ComboBoxString.Style=True
+ComboBoxString.Interaction=True
+ComboBoxString.Behavior=True
+ComboBoxString.Render Transform=True
+ComboBoxString.Performance=True
+ComboBoxString.Clipping=True
+ComboBoxString.Navigation=True
+ComboBoxString.Localization=True
+ComboBoxString.Events=True
+WB_SettingsPanel_C.Appearance=True
+WB_SettingsPanel_C.Input=True
+WB_SettingsPanel_C.Interaction=True
+WB_SettingsPanel_C.Behavior=True
+WB_SettingsPanel_C.Render Transform=True
+WB_SettingsPanel_C.Performance=True
+WB_SettingsPanel_C.Clipping=True
+WB_SettingsPanel_C.Navigation=True
+WB_SettingsPanel_C.Localization=True
+WB_SettingsPanel_C.Designer=True
+WB_SettingsPanel_C.Layout=True
+WB_SettingsPanel_C.Default=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Content.DefaultOptions\" \"Object.Content.ContentPadding\" \"Object.Style.ItemStyle\" \"Object.Style.Font\" \"Object.Style.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 Border="\"Object.Content.Padding\" \"Object.Appearance.Background\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Content.DefaultOptions\" \"Object.Content.ContentPadding\" \"Object.Style.ItemStyle\" \"Object.Style.Font\" \"Object.Style.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Content.DefaultOptions\" \"Object.Content.ContentPadding\" \"Object.Style.ItemStyle\" \"Object.Style.Font\" \"Object.Style.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
@@ -1241,7 +1288,7 @@ Image="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTra
 ExpandableArea="\"Object.Style.Style\" \"Object.Style.BorderBrush\" \"Object.Expansion.HeaderPadding\" \"Object.Expansion.AreaPadding\" \"Object.Render Transform.RenderTransform\" "
 Spacer="\"Object.Render Transform.RenderTransform\" "
 WB_LapInfo_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WB_SessionInfo_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
 WB_ConnectionPanel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object.Render Transform.RenderTransform\" "
@@ -1257,16 +1304,16 @@ ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetBarStyle.NormalThum
 Overlay="\"Object.Render Transform.RenderTransform\" "
 MenuAnchor="\"Object.Render Transform.RenderTransform\" "
 WB_CarEntry_C="\"Object.Render Transform.RenderTransform\" "
-WB_CarInfo_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+WB_CarInfo_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
 CrowdManager="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 CrowdManagerBase="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 WB_CameraPanel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
 WB_CameraSet_C=
 WB_CameraButton_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
 ScaleBox="\"Object.Render Transform.RenderTransform\" "
-WB_Settings_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
+WB_Settings_C="\"Object.Render Transform.RenderTransform\" "
 Slider="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
-ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Render Transform.RenderTransform\" "
 BP_GameInstance_C=
 ACCDGameInstance=
 GameInstance=
@@ -1294,18 +1341,18 @@ TileMapEditorSettings="\"Object.Background.DefaultBackgroundColor\" \"Object.Gri
 TileSetEditorSettings="\"Object.Background.DefaultBackgroundColor\" "
 AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" "
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
-BP_SaveGame_C="\"Object.ACCDSettings\" \"Object.ACCDSettings\" "
-SaveGame="\"Object.ACCDSettings\" \"Object.ACCDSettings\" "
+BP_SaveGame_C=
+SaveGame=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 WB_TrackPanel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
 WB_BroadcastEvents_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
 WB_HudPanel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
 WB_HudButton_C="\"Object.HudPanel\" \"Object.HudPanel\" "
-WB_HighlightsEntry_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
+WB_HighlightsEntry_C="\"Object.ReplayPanel\" \"Object.ReplayPanel\" "
 SetEventType=
-WB_HighlightsList_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
+WB_HighlightsList_C="\"Object.ReplayPanel\" \"Object.ReplayPanel\" "
 WB_ResMov_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
-WB_ToolBar_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
+WB_ToolBar_C=
 DynamicEntryBox="\"Object.Render Transform.RenderTransform\" "
 WB_ReplayEntryTest_C=
 WB_BaseWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
@@ -1319,6 +1366,13 @@ ListViewBase="\"Object.Render Transform.RenderTransform\" "
 NativeWidgetHost="\"Object.Render Transform.RenderTransform\" "
 MWB_ConnectionPanel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" "
 UniformGridPanel="\"Object.Render Transform.RenderTransform\" "
+SetDelta_7="\"Struct.NewLocalVar_0\" "
+SetDelta="\"Struct.DeltaNeutralColor\" "
+BP_HUD_C="\"Object.ACCDClientLayout\" \"Object.ACCDClientLayout\" "
+HUD="\"Object.ACCDClientLayout\" \"Object.ACCDClientLayout\" "
+SpinBox="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Content.ContentPadding\" \"Object.Style.ItemStyle\" \"Object.Style.Font\" \"Object.Style.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
+WB_SettingsPanel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Maps/LVL_ACCDClient.LVL_ACCDClient:PersistentLevel.LVL_ACCDClient=0
@@ -1372,7 +1426,7 @@ UniformGridPanel="\"Object.Render Transform.RenderTransform\" "
 /Game/UMG/Test/ResizableWindow.ResizableWindow=0
 /Game/UMG/Test/HoveredEventWidget.HoveredEventWidget=0
 /Game/UMG/Connection/WB_ConnectionState.WB_ConnectionState=0
-/Game/UMG/Session/WB_SessionInfo.WB_SessionInfo=1
+/Game/UMG/Session/WB_SessionInfo.WB_SessionInfo=0
 /Game/UMG/HudPanel/WB_HudPanel.WB_HudPanel=0
 /Game/UMG/HudPanel/WB_HudButton.WB_HudButton=0
 /Game/UMG/Settings/WB_Settings.WB_Settings=0
@@ -1380,6 +1434,12 @@ UniformGridPanel="\"Object.Render Transform.RenderTransform\" "
 /Game/UMG/Test/WB_MovTest.WB_MovTest=1
 /Game/Textures/video-camera.video-camera=0
 /Game/UMG/Track/WB_TrackPanel.WB_TrackPanel=0
+/Game/Blueprints/Structures/ACCDWidgetPosition.ACCDWidgetPosition=0
+/Game/Blueprints/Enums/E_PlatformNames.E_PlatformNames=0
+/Game/Blueprints/Framework/BP_HUD.BP_HUD=0
+/Game/Blueprints/Framework/BP_GameMode.BP_GameMode=0
+/Game/Blueprints/Enums/E_WidgetCategory.E_WidgetCategory=0
+/Game/UMG/Settings/WB_SettingsPanel.WB_SettingsPanel=0
 
 [Directories2]
 UNR=../../../../../Projects/ACCDirector/Content/Maps
@@ -1928,7 +1988,7 @@ Voice.TimeStamp=2019.05.21-20.21.22
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2019.05.21-20.20.06
 MovieSceneCapture.LastCompileMethod=External
-ACCDirector.TimeStamp=2019.05.28-09.49.59
+ACCDirector.TimeStamp=2019.06.04-13.08.45
 ACCDirector.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2019.05.21-20.19.08
 ExternalImagePicker.LastCompileMethod=External
@@ -1968,34 +2028,38 @@ LiveCoding.TimeStamp=2019.05.21-20.19.43
 LiveCoding.LastCompileMethod=External
 AnimationBlueprintEditor.TimeStamp=2019.05.21-20.18.06
 AnimationBlueprintEditor.LastCompileMethod=External
-LauncherServices.TimeStamp=2019.04.03-08.41.09
-LauncherServices.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2019.05.21-20.19.40
+LauncherServices.LastCompileMethod=External
+BlueprintNativeCodeGen.TimeStamp=2019.05.21-20.18.25
+BlueprintNativeCodeGen.LastCompileMethod=Unknown
+BlueprintCompilerCppBackend.TimeStamp=2019.05.21-20.18.23
+BlueprintCompilerCppBackend.LastCompileMethod=Unknown
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/BP_ACCDClient.BP_ACCDClient;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UMG/Car/WB_CarsList
-MRUItem1=/Game/UMG/Replay/WB_HighlightsList
-MRUItem2=/Game/UMG/WB_ClientLayout
-MRUItem3=/Game/UMG/Replay/WB_ReplayPanel
-MRUItem4=/Game/UMG/Replay/WB_HighlightsEntry
-MRUItem5=/Game/UMG/Track/WB_TrackPanel
-MRUItem6=/Game/UMG/HudPanel/WB_HudPanel
-MRUItem7=/Game/UMG/Connection/WB_ConnectionPanel
-MRUItem8=/Game/UMG/Camera/WB_CameraPanel
-MRUItem9=/Game/UMG/Settings/WB_Settings
-MRUItem10=/Game/Maps/LVL_ACCDClient
-MRUItem11=/Game/UMG/Car/WB_CarEntry
-MRUItem12=/Game/UMG/Lap/WB_LapInfo
-MRUItem13=/Game/UMG/Car/WB_CarInfo
+MRUItem0=/Game/UMG/Settings/WB_SettingsPanel
+MRUItem1=/Game/UMG/WB_ClientLayout
+MRUItem2=/Game/Blueprints/BP_SaveGame
+MRUItem3=/Game/UMG/Connection/WB_ConnectionPanel
+MRUItem4=/Game/UMG/Connection/WB_ConnectionState
+MRUItem5=/Game/UMG/WB_ToolBar
+MRUItem6=/Game/UMG/Settings/WB_Settings
+MRUItem7=/Game/Blueprints/Framework/BP_GameInstance
+MRUItem8=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem9=/Game/UMG/Replay/WB_HighlightsEntry
+MRUItem10=/Game/UMG/Replay/WB_HighlightsList
+MRUItem11=/Game/UMG/Replay/WB_ReplayPanel
+MRUItem12=/Game/UMG/Car/WB_CarInfo
+MRUItem13=/Game/UMG/Track/WB_TrackPanel
 MRUItem14=/Game/UMG/Session/WB_SessionInfo
-MRUItem15=/Game/UMG/WB_ToolBar
-MRUItem16=/Game/Textures/info-2-64
-MRUItem17=/Game/Textures/video-camera
-MRUItem18=/Game/UMG/HudPanel/WB_HudButton
-MRUItem19=/Game/UMG/Camera/WB_CameraButton
+MRUItem15=/Game/UMG/HudPanel/WB_HudPanel
+MRUItem16=/Game/UMG/Car/WB_CarsList
+MRUItem17=/Game/Blueprints/Enums/E_WidgetCategory
+MRUItem18=/Game/UMG/Camera/WB_CameraPanel
+MRUItem19=/Game/Blueprints/ACCD/BP_ACCDClient
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -2160,6 +2224,11 @@ WB_ConnectionPanel_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty
 SortList_12=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 SortList=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 MWB_ConnectionPanel_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+SetDelta_7=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+SetDelta=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+BP_HUD_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+BP_ACCDClient_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+WB_SettingsPanel_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2300,5 +2369,8 @@ bUsePlayersOnlyForPause=True
 bLogNavOctreeOnStop=False
 PresistentFilters=(SearchBoxFilter="",ObjectNameFilter="",Categories=,SelectedClasses=)
 DebugMeshMaterialFakeLightName=/Engine/EngineDebugMaterials/DebugMeshMaterialFakeLight.DebugMeshMaterialFakeLight
+
+[/Script/UnrealEd.LevelEditorPlaySettings]
+LastExecutedPlayModeType=PlayMode_InViewPort
 
 
