--- a/Saved/Config/Windows/GameUserSettings.ini
+++ b/Saved/Config/Windows/GameUserSettings.ini
@@ -1,15 +1,15 @@
 [/Script/Engine.GameUserSettings]
 bUseVSync=False
 bUseDynamicResolution=False
-ResolutionSizeX=1920
-ResolutionSizeY=1080
-LastUserConfirmedResolutionSizeX=1920
-LastUserConfirmedResolutionSizeY=1080
+ResolutionSizeX=1600
+ResolutionSizeY=1024
+LastUserConfirmedResolutionSizeX=1280
+LastUserConfirmedResolutionSizeY=720
 WindowPosX=-1
 WindowPosY=-1
-FullscreenMode=1
+FullscreenMode=0
 LastConfirmedFullscreenMode=1
-PreferredFullscreenMode=1
+PreferredFullscreenMode=0
 Version=5
 AudioQualityLevel=0
 LastConfirmedAudioQualityLevel=0
@@ -26,5 +26,15 @@ LastGPUBenchmarkResult=-1.000000
 LastGPUBenchmarkMultiplier=1.000000
 bUseHDRDisplayOutput=False
 HDRDisplayOutputNits=1000
+
+[ScalabilityGroups]
+sg.ResolutionQuality=100.000000
+sg.ViewDistanceQuality=3
+sg.AntiAliasingQuality=3
+sg.ShadowQuality=3
+sg.PostProcessQuality=3
+sg.TextureQuality=3
+sg.EffectsQuality=3
+sg.FoliageQuality=3
 
 
