--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,8 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A032F5764178B978ED7931AB9B9C20E9
-ProjectVersion=1.0.2
+ProjectVersion=1.0.3
 ProjectName=ACCDirector
 CompanyName=Yuri Belleri
 bUseBorderlessWindow=False
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "C4AB1B1B449EAFAB9C22D584B56A0044", "{GameName} x{PlatformArchitecture} {RHIName}")
+bShouldWindowPreserveAspectRatio=False
 
